k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-svc
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
